--- a/index.html
+++ b/index.html
@@ -360,7 +360,64 @@
                     </a></li>
                 </ul>
             </div>
+            <div class="footer-form-box">
+                <p class="form-title">Subscribe</p>
+                <form class="footer-form">
+                    <label>
+                        <input type="email" name="footer-email" class="footer-input" placeholder="E-mail">
+                    </label>
+                    <button type="submit" class="footer-btn-form">Subscribe
+                        <svg class="footer-form-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-tg"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
+    <div class="backdrop is_open">
+        <div class="modal">
+            <button class="modal-close" type="button">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                </svg>
+            </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form>
+                <div class="modal-field">
+                    <label for="user-name" class="modal-label">Name</label>
+                    <div class="box-input-svg">
+                        <input type="text" class="modal-input" id="user-name" name="user-name" >
+                        <svg class="modal-input-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label for="user-tel" class="modal-label">Phone</label>
+                    <div class="box-input-svg">
+                        <input type="tel" class="modal-input" id="user-tel" name="user-tel">
+                        <svg class="modal-input-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label for="user-email" class="modal-label">Email</label>
+                    <div class="box-input-svg">
+                        <input type="email" class="modal-input" id="user-email" name="user-email">
+                        <svg class="modal-input-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label for="comment" class="modal-label">Comment</label>
+                    <textarea class="modal-text" id="comment" name="comment" cols="30" placeholder="Text input" ></textarea>
+                </div>
+                <button type="submit" class="modal-btn-send">Send</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
