--- a/index.html
+++ b/index.html
@@ -415,6 +415,16 @@
                     <label for="comment" class="modal-label">Comment</label>
                     <textarea class="modal-text" id="comment" name="comment" cols="30" placeholder="Text input" ></textarea>
                 </div>
+                <div class="modal-field">
+                    <input type="checkbox" name="modal-privacy" id="modal-privacy" required class="modal-check">
+                    <label for="modal-privacy" class="modal-check-text">
+                        <span>
+                            <svg class="modal-check-icon" width="10" height="7">
+                                <use href="./images/icons.svg#icon-check"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the<a href="" class="modal-check-link" style="margin-left: 4px;">Privacy Policy</a></label>
+                </div>
                 <button type="submit" class="modal-btn-send">Send</button>
             </form>
         </div>
