--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             <div class="footer-form-box">
                 <p class="form-title">Subscribe</p>
                 <form class="footer-form">
-                    <label>
+                    <label class="form-label-footer">
                         <input type="email" name="footer-email" class="footer-input" placeholder="E-mail">
                     </label>
                     <button type="submit" class="footer-btn-form">Subscribe
@@ -388,7 +388,7 @@
                     <label for="user-name" class="modal-label">Name</label>
                     <div class="box-input-svg">
                         <input type="text" class="modal-input" id="user-name" name="user-name" >
-                        <svg class="modal-input-icon" width="20" height="20">
+                        <svg class="modal-input-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
                         </svg>
                     </div>
@@ -406,20 +406,20 @@
                     <label for="user-email" class="modal-label">Email</label>
                     <div class="box-input-svg">
                         <input type="email" class="modal-input" id="user-email" name="user-email">
-                        <svg class="modal-input-icon" width="20" height="20">
+                        <svg class="modal-input-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label for="comment" class="modal-label">Comment</label>
-                    <textarea class="modal-text" id="comment" name="comment" cols="30" placeholder="Text input" ></textarea>
+                    <label for="user-comment" class="modal-label">Comment</label>
+                    <textarea class="modal-text" id="user-comment" name="user-comment" cols="30" placeholder="Text input" ></textarea>
                 </div>
                 <div class="modal-field">
-                    <input type="checkbox" name="modal-privacy" id="modal-privacy" required class="modal-check">
-                    <label for="modal-privacy" class="modal-check-text">
-                        <span>
-                            <svg class="modal-check-icon" width="10" height="7">
+                    <input type="checkbox" name="user-privacy" id="user-privacy" value="true" required class="modal-check visually-hidden">
+                    <label for="user-privacy" class="modal-check-text">
+                        <span class="label-span-footer">
+                            <svg class="modal-check-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
